infra/k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rimo
  labels:
    app.kubernetes.io/name: rimo
